added generic hashmap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(OpenSSL REQUIRED)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 add_subdirectory(src/httpws)
+add_subdirectory(src/hashmap)
 
 add_library (pprint SHARED src/pprint.c)
 add_executable (crochet src/main.c)
