successful tree generation of json to allow for constant lookup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -O0 -g")
+  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -O2 -g")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -O0 -g")
+  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -O2 -g")
   message (WARNING "gcc build will output a logs differently than clang")
 else()
   message (FATAL_ERROR "supported compilers are GCC and CLANG only")
@@ -28,5 +28,5 @@ add_subdirectory(src/ffjson)
 add_library (pprint SHARED src/pprint.c)
 add_executable (crochet src/main.c)
 
-target_link_libraries (crochet pprint httpws ffjson OpenSSL::SSL
+target_link_libraries (crochet pprint httpws ffjson hashmap OpenSSL::SSL
   OpenSSL::Crypto)
