fixed json parse issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -O2 -g")
+if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
+  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -O0 -g")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -O2 -g")
+  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -O0 -g")
   message (WARNING "gcc build will output a logs differently than clang")
 else()
   message (FATAL_ERROR "supported compilers are GCC and CLANG only")
