testing oanda polling speed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 if (CMAKE_C_COMPILER_ID STREQUAL "Clang")
-  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -O0 -g")
+  set (CMAKE_C_FLAGS "-Weverything -Werror -Wpedantic -Ofast -g")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -O0 -g")
+  set (CMAKE_C_FLAGS "-Wall -Wextra -Werror -Wpedantic -Ofast -g")
   message (WARNING "gcc build will output a logs differently than clang")
   message (WARNING "the output logs will look terrible, consider building")
   message (WARNING "using clang")
@@ -31,6 +31,7 @@ add_subdirectory(src/finmath)
 add_subdirectory(src/orderbooks)
 
 add_library (pprint SHARED src/pprint.c)
+
 add_executable (crochet src/main.c)
 target_link_libraries (crochet pprint httpws ffjson hashmap exchanges
   orderbooks finmath OpenSSL::SSL OpenSSL::Crypto)
