--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,13 @@ add_subdirectory(src/finmath)
 add_subdirectory(src/orderbooks)
 
 add_library (pprint src/pprint.c)
+add_library (globals src/globals.c)
 
 add_executable (crochet src/main.c)
-target_link_libraries (crochet pprint httpws ffjson hashmap exchanges
+target_link_libraries (crochet globals pprint httpws ffjson hashmap exchanges
   orderbooks finmath OpenSSL::SSL OpenSSL::Crypto)
 
 add_executable (crochet-test src/main.c)
 target_compile_definitions(crochet-test PUBLIC DO_UNIT_TESTS)
-target_link_libraries (crochet-test pprint httpws ffjson hashmap exchanges
+target_link_libraries (crochet-test globals pprint httpws ffjson hashmap exchanges
   orderbooks finmath OpenSSL::SSL OpenSSL::Crypto)
