added some freebsd ifdefs and made cmake look ugly have to fix that

--- a/src/exchanges/CMakeLists.txt
+++ b/src/exchanges/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library( exchanges coinbase.c oanda.c )
 target_link_libraries( exchanges httpws )
+set_target_properties( exchanges PROPERTIES RULE_MESSAGES OFF)
