--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required (VERSION 3.14.5)
 
 project (crochet)
 
-set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_VERBOSE_MAKEFILE ON)
+set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -41,3 +43,8 @@ add_executable (crochet-test src/main.c)
 target_compile_definitions(crochet-test PUBLIC DO_UNIT_TESTS)
 target_link_libraries (crochet-test globals pprint httpws ffjson hashmap exchanges
   orderbooks finmath OpenSSL::SSL OpenSSL::Crypto)
+
+set_target_properties(crochet PROPERTIES RULE_MESSAGES OFF)
+set_target_properties(crochet-test PROPERTIES RULE_MESSAGES OFF)
+
+
