--- a/src/exchanges/CMakeLists.txt
+++ b/src/exchanges/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_library( exchanges coinbase.c oanda.c )
-target_link_libraries( exchanges httpws )
-set_target_properties( exchanges PROPERTIES RULE_MESSAGES OFF)
+add_library( exchanges exchanges.c coinbase.c oanda.c)
+target_link_libraries( exchanges httpws security)
