--- a/web/package.json
+++ b/web/package.json
@@ -6,9 +6,11 @@
   "author": "washcloth et al",
   "license": "BSD",
   "scripts": {
-    "main": "node index.js"
+    "main": "node server/index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/express": "^4.17.8",
+    "express": "^4.17.1",
+    "typescript": "^4.0.2"
   }
 }
