--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "author": "washcloth et al",
   "license": "BSD",
   "scripts": {
-    "main": "node server/index.js"
+    "main": "./node_modules/.bin/tsc server/index.ts && node server/index.js"
   },
   "dependencies": {
     "@types/express": "^4.17.8",
